2006-06-27  Mikael Hallendal  <micke@imendio.com>

	* Release 1.0.4

	* configure.ac: 
	- Bumped to 1.0.4
	* NEWS:
	- Added news about 1.0.4

2006-06-25  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (lm_connection_close):
	- Patch from Martyn Russel
	- Make sure that disconnect is signalled if the connection is closed
	  during opening phase.
	- Fixes LM-43

2006-06-06  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Call lm_parser_free to actually free it.
	* loudmouth/lm-parser.c: (lm_parser_free):
	- Free up memory used by the parser.
	- Fixes LM-39

2006-05-27  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: (ssl_verify_certificate):
	- Fixed an error with an uninitialized value.
	- Fixes LM-35.

2006-05-26  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free),
	(connection_handle_message), (_lm_connection_failed_with_error),
	(connection_auth_reply), (connection_stream_received),
	(lm_connection_set_disconnect_function):
	- Patch from Owen Taylor fixes two reentrancy problems.
	- Fixes LM-37.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Speed release of 1.0.3
	* NEWS: Updated
	* configure.in: Bumped to 1.0.3
	* loudmouth/lm-ssl.c: (ssl_free), (ssl_func_always_continue):
	- Build fix for building without SSL, thanks foser, LM-25.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Release 1.0.2
	* NEWS: Updated for 1.0.2
	* configure.in: Bumped version to 1.0.2

2006-04-03  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free),
	(_lm_connection_succeeded), (connection_buffered_write_cb),
	(connection_output_is_buffered), (connection_setup_output_buffer),
	(connection_do_close), (connection_do_write), (connection_send),
	(lm_connection_new), (lm_connection_authenticate):
	- Added an output buffer that will be enabled if the nonblocking write
	  cannot be performed in one go (for large messages).